DDI-Lifecycle/3.2/model/_sources/composite-types/index.rst.txt
All Composite Types
===================
DDI32 has 269 composite types.

.. toctree::
   :maxdepth: 1

   AccessRestrictionDateType/index
   AccessType/index
   ActionToMinimizeLossesType/index
   ActionType/index
   AdditionalInformationType/index
   AddressType/index
   AggregationDefinitionType/index
   AggregationType/index
   AggregationVariablesType/index
   AnchorType/index
   ArchiveSpecificType/index
   AreaCoverageType/index
   AttachmentLocationType/index
   AttributeType/index
   AudioType/index
   AuthorizationSourceType/index
   AuthorizedSourceType/index
   BasedOnObjectType/index
   BasicIncrementType/index
   BibliographicNameType/index
   BindingType/index
   BoundingBoxType/index
   BudgetType/index
   CaseIdentificationType/index
   CaseSpecificationType/index
   CategoryDomainType/index
   CategoryRepresentationBaseType/index
   CategoryStatisticType/index
   CategoryValueType/index
   CellCoordinatesAsDefinedType/index
   CellLabelType/index
   CharacterParameterType/index
   CitationType/index
   CodeDomainType/index
   CodeRepresentationBaseType/index
   CodeSubsetInformationType/index
   CodeType/index
   CodeValueType/index
   CohortType/index
   CollectionEventType/index
   CollectionSituationType/index
   CollectionType/index
   CommandCodeType/index
   CommandFileType/index
   CommandType/index
   ComplianceType/index
   ComponentPartsType/index
   ConcatenatedValueType/index
   ConditionalIdentifierType/index
   ConditionalTextType/index
   ContactInformationType/index
   ContentDateOffsetType/index
   ContentLinkingMapType/index
   ContentType/index
   ContributorType/index
   CoordinatePairsType/index
   CoordinateRegionType/index
   CorrespondenceType/index
   CountryCodeType/index
   CountryType/index
   Country_2Type/index
   Country_3Type/index
   Country_NType/index
   CoverageType/index
   CreatorType/index
   DataAppraisalInformationType/index
   DataCollectionFrequencyType/index
   DataCollectionMethodologyType/index
   DataExistenceType/index
   DataFileIdentificationType/index
   DataFileVersionType/index
   DataFingerprintType/index
   DataItemType/index
   DataSourceType/index
   DateTimeDomainType/index
   DateTimeRepresentationBaseType/index
   DateType/index
   DDIMaintenanceAgencyIDType/index
   DefaultMissingValuesType/index
   DefiningCharacteristicType/index
   DelimiterType/index
   DeviationFromSampleDesignType/index
   DimensionIntersectType/index
   DimensionRankValueType/index
   DimensionType/index
   DistributionDomainType/index
   DistributionRepresentationBaseType/index
   DomainSpecificValueType/index
   DoubleNumberRangeValueType/index
   DynamicTextType/index
   ElseIfType/index
   EmailType/index
   EmbargoType/index
   EmptyType/index
   EvaluatorType/index
   ExPostEvaluationType/index
   ExternalCategoryRepresentationBaseType/index
   ExternalInterviewerInstructionType/index
   FilteredCategoryStatisticsType/index
   FilterVariableCategoryType/index
   FixedIdentifierType/index
   FormType/index
   FundingInformationType/index
   GenerationType/index
   GeographicBoundaryType/index
   GeographicCoverageType/index
   GeographicDomainType/index
   GeographicLevelType/index
   GeographicLocationCodeDomainType/index
   GeographicLocationCodeRepresentationBaseType/index
   GeographicLocationIdentifierType/index
   GeographicRepresentationBaseType/index
   GeographicStructureCodeDomainType/index
   GeographicStructureCodeRepresentationBaseType/index
   GridAttachmentType/index
   GridDimensionType/index
   GridResponseDomainType/index
   GrossFileStructureType/index
   GrossRecordStructureType/index
   HistoricalDateType/index
   IdentifiableType/index
   IdentificationPortionType/index
   IdentifierParsingInformationType/index
   ImageAreaType/index
   ImageType/index
   IncludedCodeType/index
   IncludedGeographicLocationCodesType/index
   IncludedGeographicStructureCodesType/index
   IndividualIdentificationType/index
   IndividualLanguageType/index
   IndividualNameType/index
   InParameterType/index
   InstantMessagingType/index
   InstructionAttachmentLocationType/index
   InternationalCodeValueType/index
   InternationalIdentifierType/index
   InternationalStringType/index
   IntervalType/index
   ItemMapType/index
   ItemSetType/index
   ItemType/index
   ItemValueType/index
   KindOfDataType/index
   LabelType/index
   LevelReferenceType/index
   LevelType/index
   LifecycleEventType/index
   LifecycleInformationType/index
   LimitedCodeSegmentCapturedType/index
   LineParameterType/index
   LinkingMapType/index
   LiteralTextType/index
   LocalAddedContentType/index
   LocationDomainType/index
   LocationNameType/index
   LocationRepresentationBaseType/index
   LocationValueType/index
   LogicalRecordType/index
   MaintainableObjectType/index
   MeasureDefinitionType/index
   MeasureDimensionType/index
   MeasureDimensionValueType/index
   MetadataQualityType/index
   ModeOfCollectionType/index
   NameType/index
   NCubesInRecordType/index
   NominalDomainType/index
   NominalRepresentationBaseType/index
   NoteType/index
   NotUsedType/index
   NumberRangeType/index
   NumberRangeValueType/index
   NumericDomainType/index
   NumericRepresentationBaseType/index
   OperationType/index
   OrganizationIdentificationType/index
   OrganizationNameType/index
   OriginType/index
   OtherMaterialType/index
   ParameterType/index
   PhysicalLocationType/index
   PhysicalRecordSegmentType/index
   PointType/index
   PolygonType/index
   PrimaryComponentLevelType/index
   PrivateImageType/index
   ProprietaryInfoType/index
   PublisherType/index
   QuestionSequenceType/index
   RangeType/index
   RangeValueType/index
   RankingDomainType/index
   RankingRangeType/index
   RankingRepresentationBaseType/index
   RecordRelationshipType/index
   RecordSetType/index
   RecordType/index
   ReferenceDateType/index
   RelatedValueType/index
   RelationshipType/index
   RepresentationType/index
   RequiredResourcePackagesType/index
   ResearcherIDType/index
   ResourcePackageArchiveType/index
   ResponseCardinalityType/index
   ResponseDomainInMixedType/index
   ResponseRateType/index
   ResponseTextSetType/index
   RestrictionProcessType/index
   RoleType/index
   RosterType/index
   SamplingProcedureType/index
   ScaleDimensionType/index
   ScaleDomainType/index
   ScaleRepresentationBaseType/index
   SegmentType/index
   SelectDimensionType/index
   SeriesStatementType/index
   SimilarConceptType/index
   SoftwareType/index
   SourceObjectType/index
   SourceRepresentationType/index
   SourceTargetLinkType/index
   SpatialCoordinateType/index
   SpecificSequenceType/index
   StandardKeyValuePairType/index
   StandardType/index
   StandardWeightType/index
   StatisticalDataLocationType/index
   StatisticalSummaryType/index
   StatisticType/index
   StringType/index
   StructuredCommandType/index
   StructuredMixedGridResponseDomainType/index
   StructuredMixedResponseDomainType/index
   StructuredStringType/index
   StudyClassType/index
   SummaryStatisticType/index
   TargetObjectType/index
   TargetRepresentationType/index
   TelephoneType/index
   TemporalCoverageType/index
   TextContentType/index
   TextDomainType/index
   TextRepresentationBaseType/index
   TextType/index
   TextualType/index
   TimeMethodType/index
   TopicalCoverageType/index
   TranslationType/index
   UnfilteredCategoryStatisticsType/index
   URIType/index
   URLType/index
   URNType/index
   UsedType/index
   UserIDType/index
   ValueType/index
   VariableCategoryType/index
   VariableItemType/index
   VariableOrderType/index
   VariableRepresentationType/index
   VariableSetType/index
   VariablesInRecordType/index
   VariableValueReferenceType/index
   VersionDistinctionType/index
   VersionRationaleType/index
   VideoType/index
   VocabularyType/index
   XMLPrefixMapType/index
