DDI-Lifecycle/3.3/model/_sources/composite-types/index.rst.txt
All Composite Types
===================
DDI has 306 composite types.

.. toctree::
   :maxdepth: 1

   AccessRestrictionDateType/index
   AccessType/index
   ActionToMinimizeLossesType/index
   ActionType/index
   AdditionalDataCollectionType/index
   AdditionalInformationType/index
   AddressType/index
   AggregationDefinitionType/index
   AggregationType/index
   AggregationVariablesType/index
   AnchorType/index
   ApplicationDetailsType/index
   ArchiveSpecificType/index
   AreaCoverageType/index
   AttachmentLocationType/index
   AttributeType/index
   AudioType/index
   AuthorizationSourceType/index
   AuthorizedPolicySourceType/index
   AuthorizedSourceType/index
   BasedOnObjectType/index
   BasicIncrementType/index
   BibliographicNameType/index
   BindingType/index
   BoundingBoxType/index
   BudgetDocumentType/index
   BudgetType/index
   CaseIdentificationType/index
   CaseLawType/index
   CaseSpecificationType/index
   CategoryDomainType/index
   CategoryRepresentationBaseType/index
   CategoryStatisticType/index
   CategoryValueType/index
   CellCoordinatesAsDefinedType/index
   CellLabelType/index
   CharacterParameterType/index
   CitationType/index
   ClassificationIndexEntryType/index
   ClassificationMapType/index
   CodeDomainType/index
   CodeRepresentationBaseType/index
   CodeSubsetInformationType/index
   CodeType/index
   CodeValueType/index
   CohortType/index
   CollectionEventType/index
   CollectionSituationType/index
   CollectionType/index
   CommandCodeType/index
   CommandFileType/index
   CommandType/index
   ComplianceDefinitionType/index
   ComplianceType/index
   ConcatenatedValueType/index
   ConditionalIdentifierType/index
   ConditionalResultType/index
   ConditionalTextType/index
   ContactInformationType/index
   ContentDateOffsetType/index
   ContentLinkingMapType/index
   ContentType/index
   ContributorType/index
   CoordinatePairsType/index
   CoordinateRegionType/index
   CorrespondenceType/index
   CostStructureType/index
   CountryCodeType/index
   CoverageType/index
   CreateSummaryType/index
   CreatorType/index
   DataAppraisalInformationType/index
   DataCollectionFrequencyType/index
   DataCollectionMethodologyType/index
   DataExistenceType/index
   DataFileIdentificationType/index
   DataFileVersionType/index
   DataFingerprintType/index
   DataItemType/index
   DataSourceType/index
   DateTimeDomainType/index
   DateTimeRepresentationBaseType/index
   DateType/index
   DDIMaintenanceAgencyIDType/index
   DebriefingProcessType/index
   DefaultMissingValuesType/index
   DefiningCharacteristicType/index
   DelimiterType/index
   DevelopmentObjectType/index
   DeviationFromSampleDesignType/index
   DimensionIntersectType/index
   DimensionRankValueType/index
   DimensionType/index
   DistributionDomainType/index
   DistributionRepresentationBaseType/index
   DomainSpecificValueType/index
   DoubleNumberRangeValueType/index
   DynamicTextType/index
   ElseIfTextType/index
   ElseIfType/index
   EmailType/index
   EmbargoType/index
   EmptyType/index
   EvaluatorType/index
   ExPostEvaluationType/index
   ExternalAidType/index
   ExternalCategoryRepresentationBaseType/index
   ExternalInformationType/index
   ExternalInterviewerInstructionType/index
   FilteredCategoryStatisticsType/index
   FilterVariableCategoryType/index
   FixedCellValueType/index
   FixedIdentifierType/index
   FormType/index
   FundingInformationType/index
   GenerationType/index
   GeographicBoundaryType/index
   GeographicCoverageType/index
   GeographicDomainType/index
   GeographicLevelType/index
   GeographicLocationCodeDomainType/index
   GeographicLocationCodeRepresentationBaseType/index
   GeographicLocationIdentifierType/index
   GeographicRepresentationBaseType/index
   GeographicStructureCodeDomainType/index
   GeographicStructureCodeRepresentationBaseType/index
   GridAttachmentType/index
   GridDimensionType/index
   GridResponseDomainInMixedType/index
   GrossFileStructureType/index
   GrossRecordStructureType/index
   HistoricalDateType/index
   IdentifiableType/index
   IdentificationPortionType/index
   IdentifierParsingInformationType/index
   IfThenElseTextType/index
   ImageAreaType/index
   ImageType/index
   IncludedCodeType/index
   IncludedGeographicLocationCodesType/index
   IncludedGeographicStructureCodesType/index
   IndividualIdentificationType/index
   IndividualLanguageType/index
   IndividualNameType/index
   InParameterType/index
   InstantMessagingType/index
   InstructionAttachmentLocationType/index
   InternationalCodeValueType/index
   InternationalIdentifierType/index
   InternationalStringType/index
   ItemMapType/index
   ItemSetType/index
   ItemType/index
   ItemValueType/index
   KindOfDataType/index
   LabelType/index
   LanguageAbilitySoughtType/index
   LevelContextType/index
   LevelReferenceType/index
   LevelType/index
   LifecycleEventType/index
   LifecycleInformationType/index
   LimitedCodeSegmentCapturedType/index
   LineParameterType/index
   LinkingMapType/index
   LiteralTextType/index
   LocalAddedContentType/index
   LocationDomainType/index
   LocationNameType/index
   LocationRepresentationBaseType/index
   LocationValueBundleType/index
   LocationValueType/index
   LogicalRecordType/index
   MaintainableObjectType/index
   MeasureDefinitionType/index
   MeasureDimensionType/index
   MeasureDimensionValueType/index
   MetadataQualityType/index
   MethodOfAdministrationType/index
   ModeOfCollectionType/index
   ModeOfPretestCollectionType/index
   NameType/index
   NCubesInRecordType/index
   NominalDomainType/index
   NominalRepresentationBaseType/index
   NoteType/index
   NotUsedType/index
   NumberRangeType/index
   NumberRangeValueType/index
   NumericDomainType/index
   NumericRepresentationBaseType/index
   OperationType/index
   OrganizationIdentificationType/index
   OrganizationNameType/index
   OriginType/index
   ParameterType/index
   PhysicalLocationType/index
   PhysicalRecordSegmentType/index
   PointType/index
   PolygonType/index
   PopulationSizeType/index
   PopulationType/index
   PretestAdministrationType/index
   PrimaryComponentLevelType/index
   PrivateImageType/index
   ProprietaryInfoType/index
   PublicationType/index
   PublisherType/index
   QuestionSequenceType/index
   RangeType/index
   RangeValueType/index
   RankingDomainType/index
   RankingRangeType/index
   RankingRepresentationBaseType/index
   RecommendedStaffRequirementsType/index
   RecordRelationshipType/index
   RecordSetType/index
   RecordType/index
   ReferenceDateType/index
   RelatedValueType/index
   RelationshipType/index
   RepresentationType/index
   RequiredResourcePackagesType/index
   RequirementsAssessmentType/index
   ResearcherIDType/index
   ResourcePackageArchiveType/index
   ResourceUsedType/index
   ResponseCardinalityType/index
   ResponseDomainInMixedType/index
   ResponseRateType/index
   ResponseTextSetType/index
   RestrictionProcessType/index
   ResultDetailType/index
   RoleType/index
   RosterType/index
   SamplingProcedureType/index
   ScaleDimensionType/index
   ScaleDomainType/index
   ScaleRepresentationBaseType/index
   SegmentType/index
   SelectDimensionType/index
   SeriesStatementType/index
   SimilarConceptType/index
   SizeType/index
   SoftwareType/index
   SourceObjectType/index
   SourceRepresentationType/index
   SourceTargetLinkType/index
   SpatialCoordinateType/index
   SpecificSequenceType/index
   StandardKeyValuePairType/index
   StandardUsedType/index
   StandardWeightType/index
   StatisticalDataLocationType/index
   StatisticalSummaryType/index
   StatisticDoubleType/index
   StatisticType/index
   StimulusMaterialType/index
   StratificationRationaleType/index
   StratificationType/index
   StringType/index
   StructuredCommandType/index
   StructuredMixedGridResponseDomainType/index
   StructuredMixedResponseDomainType/index
   StructuredStringType/index
   StudyClassType/index
   SummaryStatisticType/index
   TargetObjectType/index
   TargetRepresentationType/index
   TargetSampleSizeType/index
   TelephoneType/index
   TemporalCoverageType/index
   TextContentType/index
   TextDomainType/index
   TextRepresentationBaseType/index
   TextType/index
   TextualType/index
   TimeMethodType/index
   TopicalCoverageType/index
   TranslationAidResourceType/index
   TranslationAidType/index
   TranslationMethodType/index
   TranslationRequirementsType/index
   TranslationType/index
   TranslatorRequirementsType/index
   UnfilteredCategoryStatisticsType/index
   URIType/index
   URLType/index
   URNType/index
   UsageGuideType/index
   UsedType/index
   UserIDType/index
   ValueType/index
   VariableAttributeType/index
   VariableCategoryType/index
   VariableItemType/index
   VariableOrderType/index
   VariableRepresentationType/index
   VariableSetType/index
   VariablesInRecordType/index
   VariableValueReferenceType/index
   VersionDistinctionType/index
   VersionRationaleType/index
   VideoType/index
   VocabularyType/index
   XMLPrefixMapType/index
